# NetworkProgrammingNotes

./: .gitmodules  ICMP.md  QUIC 协议原理浅解.md  README.md  TCP 拥塞控制详解.md  工具篇.md  深入学习IO多路复用 select poll epoll 实现原理.md  网络字节序.md  网络库设计思路.md  资料.md
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
Code/: README.md
Code/src/: .gitignore  CMakeLists.txt  README.md  client.cpp
Code/src/epoll/: CMakeLists.txt  README.md  epoll_echo_server.cpp  epoll_et_echo_server.cpp  epoll_lt_echo_server.cpp
Code/src/select/: CMakeLists.txt  m_thread_client.cpp  select_demo.cpp  select_echo_server.cpp
Excalidraw/: Drawing 2023-01-14 23.43.05.excalidraw.md  ICMP.md  TCPIP_Protocol.excalidraw.md  TCPIP协议族体系结构及主要协议.excalidraw.md  TCP_segment.md  big_little_endian.excalidraw.md
HTTP/: RESTful.md
IO函数/: read().md  recv().md  send().md  write().md
IO多路复用/: IO复用.md  epoll.md  select.md  select、poll、epoll区别.md  相关资源.md
Resources/网络编程实战/: 01-追古溯源：TCP-IP和Linux是如何改变世界的？.md  02-网络编程模型：认识客户端-服务器网络模型的基本概念.md  03丨套接字和地址：像电话和电话号码一样理解它们.md  04-TCP三次握手：怎么使用套接字格式建立连接？.md  05-使用套接字进行读写：开始交流吧.md  06-嗨，别忘了UDP这个小兄弟.md  07-What-还有本地套接字？.md  08-工欲善其事必先利其器：学会使用各种工具.md  09丨答疑篇：学习网络编程前，需要准备哪些东西？.md  10-TIME_WAIT：隐藏在细节下的魔鬼.md  11-优雅地关闭还是粗暴地关闭.md  12-连接无效：使用Keep-Alive还是应用心跳来检测？.md  13-小数据包应对之策：理解TCP协议中的动态数据传输.md  14丨UDP也可以是“已连接”？.md  15-怎么老是出现“地址已经被使用”？.md  16-如何理解TCP的“流”？.md  17-TCP并不总是“可靠”的？.md  18-防人之心不可无：检查数据的有效性.md  19丨提高篇答疑：如何理解TCP四次挥手？.md  20-大名⿍⿍的select：看我如何同时感知多个I-O事件.md  21-poll：另一种I-O多路复用.md  22-非阻塞I-O：提升性能的加速器.md  23-Linux利器：epoll的前世今生.md  24-C10K问题：高并发模型设计.md  25-使用阻塞I-O和进程模型：最传统的方式.md  26-使用阻塞I-O和线程模型：换一种轻量的方式.md  27-I-O多路复用遇上线程：使用poll单线程处理所有I-O事件.md  28-I-O多路复用进阶：子线程使用poll处理连接I-O事件.md  29-渐入佳境：使用epoll和多线程模型.md  30-真正的大杀器：异步I-O探索.md  31丨性能篇答疑：epoll源码深度剖析.md  32-自己动手写高性能HTTP服务器（一）：设计和思路.md  (+8 more)
Socket/: accept().md  bind().md  listen().md  shutdown().md  socket 流程.md  sockopt.md
Socket套接字/: accept().md  bind().md  close().md  connect().md  listen().md  sockaddr_in结构体.md  socket 流程.md  socket().md
TCPIP/: TCPIP模型.md  TCP三次握手.md  TCP四次挥手.md  TCP报文段.md  TCP状态转移图.md
文件IO/: write().md
(+9 files in other folders)
